# Logiciel_estimation_cout

./: README.md  main.spec  projet_estimation.db  pyproject.toml  requirements.txt
.github/workflows/: main.yml
CoutEnv/: pyvenv.cfg
CoutEnv/Scripts/: activate  activate.bat  activate.fish  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
src/: main.py
