[build-system]
requires = ["flet>=0.27.5"]

[project]
name = "estimation-couts"
version = "1.0.0"
description = "Application d'estimation des coûts de projets"
dependencies = [
    "flet==0.27.5",
    "reportlab>=4.0.0", 
    "pillow>=9.0.0"
]

[tool.flet]
module_name = "main"
dist_dir = "dist"

[tool.flet.web]
generate = true

[tool.flet.macos]
icon = "assets/icon.png"
bundle_id = "com.proseen.estimation"

[tool.flet.windows]
icon = "assets/icon.png"
company_name = "PROSEEN"
product_name = "Estimation des Coûts"
file_description = "Application d'estimation des coûts de projets"
file_version = "1.0.0.0"
product_version = "1.0.0"

[tool.flet.linux]
icon = "assets/icon.png"
